uploads/0b8544d8620b4ac684e03ef2479e7c88_output.txt
Compilation Error:
uploads\infix_to_postfix.c: In function 'pop':
uploads\infix_to_postfix.c:24:3: warning: 'return' with no value, in function returning non-void
   return;
   ^~~~~~
uploads\infix_to_postfix.c:21:6: note: declared here
 char pop(){
      ^~~
uploads\infix_to_postfix.c: In function 'evalPostfix':
uploads\infix_to_postfix.c:89:9: error: 'ch' undeclared (first use in this function)
  while((ch=postfix[i++]) != '\0'){
         ^~
uploads\infix_to_postfix.c:89:9: note: each undeclared identifier is reported only once for each function it appears in
